tests/test_data/invalid_semantics/type_checking/init_var_with_function.c
int f(void);

int main(void)
{
  int x = f;
}
